fix: center-align dismissable badge close button
Replace manual margin-top hack with flexbox align-self: center now that
badges use inline-flex. Slightly increased close icon size (0.5em) for
better hit target. Verified 0px offset in both light and dark mode.

--- a/src/scss/_badge-custom.scss
+++ b/src/scss/_badge-custom.scss
@@ -81,9 +81,10 @@
 
 // Dismissible badge close button
 .badge-dismissible button.btn-close {
-    height: 0.35em;
-    width: 0.35em;
-    vertical-align: middle;
-    margin-top: -3px;
+    height: 0.5em;
+    width: 0.5em;
+    align-self: center;
+    margin: 0;
+    padding: 0;
     background: rgba(0,0,0,0) url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%238d8d8d'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
 }
